--- a/client/src/index.css
+++ b/client/src/index.css
@@ -46,6 +46,12 @@
     --brutal-shadow: 4px 4px 0px 0px hsl(0 0% 5%);
     --brutal-shadow-sm: 2px 2px 0px 0px hsl(0 0% 5%);
     --brutal-shadow-hover: 6px 6px 0px 0px hsl(0 0% 5%);
+
+    --color-1: 0 100% 63%;
+    --color-2: 270 100% 63%;
+    --color-3: 210 100% 63%;
+    --color-4: 195 100% 63%;
+    --color-5: 90 100% 63%;
   }
 
   .dark {
@@ -82,6 +88,12 @@
     --brutal-shadow: 4px 4px 0px 0px hsl(0 0% 95%);
     --brutal-shadow-sm: 2px 2px 0px 0px hsl(0 0% 95%);
     --brutal-shadow-hover: 6px 6px 0px 0px hsl(0 0% 95%);
+
+    --color-1: 0 100% 63%;
+    --color-2: 270 100% 63%;
+    --color-3: 210 100% 63%;
+    --color-4: 195 100% 63%;
+    --color-5: 90 100% 63%;
   }
 }
 
